# integration

./: .gitignore  CMakeLists.txt  adapt-to-older-boost.sh  agobuffon.cpp  agobuffon.h  esbase.h  integraledeterministico.cpp  integraledeterministico.h  integralemc.cpp  integralemc.h  integration.kdev4  main.cpp  serie.cpp  serie.h
integrali/: integralebase.cpp  integralebase.h  integraledeterministico.cpp  integraledeterministico.h  integralemc.cpp  integralemc.h
relazione/: integrali-mc.py  integrali.py  integralibackend.py  integralimc.py  plot-funzione-integranda.py  quick-plotter  serie.py  valorevero.py
relazione/data/: dati-det-sommagiusta.py  deltamc-10-10.py  det-bigprecision.py  det-sommaimprecisa.py  int-det-10-6.csv  mc-smallstep.py  mc-stat-10-8.py
relazione/tex/: relazione.tex
src/: agobuffon.cpp  esbase.cpp  esbase.h  picalc.cpp  picalc.h  serie.cpp  serie.h
src/integrali/: integralebase.cpp  integralebase.h  integraledeterministico.cpp  integraledeterministico.h  integralemc.cpp
src/pathint/: pathint.cpp  pathint.h  sweeper.cpp  sweeper.h
